--- a/src/components/ApartmentsComponent/Apartments.module.scss
+++ b/src/components/ApartmentsComponent/Apartments.module.scss
@@ -64,7 +64,7 @@
   margin: 0 auto;
 
   color: $accentColor;
-  font-family: var(--font--lato);
+  // font-family: var(--font--lato);
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
