--- a/src/components/Filter/FilterItem/FilterItem.module.scss
+++ b/src/components/Filter/FilterItem/FilterItem.module.scss
@@ -79,7 +79,7 @@
 .filterCheckboxTitle {
   margin-right: 10px;
   color: $lightFontColor;
-  font-family: var(--font--lato);
+  // font-family: var(--font--lato);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
