--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -149,7 +149,7 @@
 
 .rights {
   color: $SecondaryColor;
-  font-family: var(--font--lato);
+  // font-family: var(--font--lato);
   font-size: clamp(12px, 2vw, 16px);
   font-style: normal;
   font-weight: 400;
