--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -19,7 +19,7 @@
 .title {
   position: relative;
   font-weight: 700;
-  font-family: var(--font--cormorantInfant);
+  // font-family: var(--font--cormorantInfant);
   font-size: 22px;
   line-height: 1.25;
   color: $SecondaryColor;
