--- a/src/components/OrderBtn/OrderBtn.module.scss
+++ b/src/components/OrderBtn/OrderBtn.module.scss
@@ -19,7 +19,7 @@
     box-shadow: 4px 4px 8px 0px #f6f6f440;
 
     color: $Primary50;
-    font-family: var(--font--lato);
+    // font-family: var(--font--lato);
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
