--- a/src/components/share/ButtonFilter/ButtonFilter.module.scss
+++ b/src/components/share/ButtonFilter/ButtonFilter.module.scss
@@ -44,7 +44,7 @@
 
 .filter {
   color: $Primary100;
-  font-family: var(--font--lato);
+  // font-family: var(--font--lato);
   font-size: 16px;
   font-weight: 400;
   cursor: pointer;
