--- a/src/components/Auth/Login.module.scss
+++ b/src/components/Auth/Login.module.scss
@@ -72,7 +72,7 @@
   font-size: 20px;
   border-radius: 5px;
   border: none;
-  font-family:var(--font--lato);
+  // font-family:var(--font--lato);
   font-weight: bold;
   cursor: not-allowed;
 }
@@ -90,7 +90,7 @@
 .loginGoogleBtn {
   width:360px;
   padding: 5px;
-  font-family:var(--font--lato);
+  // font-family:var(--font--lato);
   font-size:20px;
   cursor: pointer;
 }
