--- a/src/components/Auth/Register.module.scss
+++ b/src/components/Auth/Register.module.scss
@@ -72,7 +72,7 @@
   font-size: 20px;
   border-radius: 5px;
   border: none;
-  font-family:var(--font--lato);
+  // font-family:var(--font--lato);
   font-weight: bold;
   cursor: not-allowed;
 }
