--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -167,7 +167,7 @@
     padding: 8px 30px;
   }
 
-  font-family: var(--font--lato);
+  // font-family: var(--font--lato);
   padding: 8px 36px;
   color: $Primary800;
   font-size: 16px;
@@ -198,7 +198,7 @@
 }
 
 .filterButtons {
-  font-family: var(--font--lato);
+  // font-family: var(--font--lato);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -276,7 +276,7 @@
 
 .textBeds {
   color: $lightFontColor;
-  font-family: var(--font--lato);
+  // font-family: var(--font--lato);
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
