--- a/src/components/FilterRooms/FilterRoomItem/FilterRoomItem.module.scss
+++ b/src/components/FilterRooms/FilterRoomItem/FilterRoomItem.module.scss
@@ -25,7 +25,7 @@
   }
 
   color: $lightFontColor;
-  font-family: var(--font--lato);
+  // font-family: var(--font--lato);
   font-size: 16px;
   font-weight: 400;
 }
