--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,8 @@ $mobile: '360px';
 $tablet: '768px';
 $desktop: '1366px';
 
+//old styles
+
 //Primary Color
 
 $Primary900: #131112;
@@ -27,3 +29,38 @@ $lightFontColor: #ffffff;
 $accentColor: #373737;
 $dashboardBtnBgColor: #f1d889;
 $dashboardHoverBtnBgColor: #f1b806;
+
+
+
+// before this line - Daily Rent Kiev. After this - Sofia Rent
+
+//new styles
+$Primary-900: #616C46;
+$Primary-800: #838E55;
+$Primary-700: #97A25D;
+$Primary-600: #ACB668;
+$Primary-500: #BDC671;
+$Primary-400: #C6CE85;
+$Primary-300: #D1D79A;
+$Primary-200: #DEE3B6;
+$Primary-100: #EBEED1;
+$Primary-50: #F7F8ED;
+
+$Secondary-800:#454943;
+
+$Gray-900:#131112;
+$Gray-800:#333132;
+$Gray-700:#514F50;
+$Gray-600:#646263;
+$Gray-500:#8B898A;
+$Gray-400:#ACAAAB;
+$Gray-300:#D1CFD0;
+$Gray-200:#E3E1E2;
+$Gray-100:#EFEDEE;
+$Gray-50:#F9F6F8;
+$Gray-0: #FFFFFF;
+
+$Error: #A20B0B;
+$Warning: #FFC400;
+$Success: #00793C;
+$System: #2320C6;
