--- a/src/components/BreadCrumbs/BreadCrumbs.module.scss
+++ b/src/components/BreadCrumbs/BreadCrumbs.module.scss
@@ -10,9 +10,12 @@
     column-gap: 4px;
     width: -webkit-max-content;
     width: -moz-max-content;
+    font-size: 16px;
+    font-weight: 400;
     line-height: 1.6;
     cursor: pointer;
     margin-right: auto;
+    color:$Secondary-800;
 
     @media screen and (min-width: $tablet) {
         column-gap: 12px;
@@ -28,5 +31,5 @@
     width: 24px;
     height: 24px;
     fill: none;
-    stroke: $Primary900;
+    stroke: $Secondary-800;
 }
