--- a/src/components/RulesComponent/RulesComponent.module.scss
+++ b/src/components/RulesComponent/RulesComponent.module.scss
@@ -1,21 +1,6 @@
 @import "@/styles/_variables.scss";
 
 .breadCrumbsWrapper {
-  margin-bottom: 16px;
-
-  @media (min-width: $tablet) {
-    margin-bottom: 20px;
-  }
-
-  @media (min-width: $desktop) {
-    margin-bottom: 24px;
-  }
-}
-
-.rulesTitle {
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 1.4;
   margin-bottom: 12px;
 
   @media (min-width: $tablet) {
@@ -23,18 +8,34 @@
   }
 
   @media (min-width: $desktop) {
-    font-size: 36px;
-    line-height: 1.3;
-    margin-bottom: 20px;
+    margin-bottom: 8px;
   }
 }
 
-.block:not(:last-child) {
-  margin-bottom: 8px;
+.rulesTitle {
+  font-size: 26px;
+  line-height: 1.25;
+  margin-bottom: 12px;
 
   @media (min-width: $tablet) {
-    margin-bottom: 12px;
+    margin-bottom: 16px;
   }
+
+  @media (min-width: $desktop) {
+    font-size: 40px;
+    line-height: 1;
+  }
+}
+
+.block{
+  padding:12px;
+  border-radius:12px;
+  background-color:$Primary-800;
+  color:$Gray-0;
+}
+
+.block:not(:last-child) {
+  margin-bottom: 12px; 
 
   @media (min-width: $desktop) {
     margin-bottom: 16px;
@@ -42,41 +43,26 @@
 }
 
 .blockTitle {
-  font-weight: 700;
-  font-size: 18px;
+  font-family: GothamProBold, sans-serif;
+  font-size: 22px;
   line-height: 1.4;
-  margin-bottom: 4px;
-
-  @media (min-width: $tablet) {
-    margin-bottom: 8px;
-  }
-
-  @media (min-width: $desktop) {
-    font-size: 22px;
-    margin-bottom: 12px;
-  }
+  margin-bottom: 12px;
 }
 
 .blockList {
   list-style: decimal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.6;
-
-  @media (min-width: $desktop) {
-    font-size: 20px;
-    line-height: 1.7;
-  }
+  font-size: 20px;
+  line-height: 1.7;
 }
 
 .blockList>li {
   margin-left: 20px;
 
-  @media (min-width: $tablet) {
-    margin-left: 24px;
+  @media (min-width: $mobile) {
+  margin-left: 28px;
   }
 
-  @media (min-width: $desktop) {
-    margin-left: 28px;
+  @media (min-width: $tablet) {
+    margin-left: 32px;
   }
 }
