--- a/src/components/Logo/Logo.module.scss
+++ b/src/components/Logo/Logo.module.scss
@@ -1,21 +1,17 @@
 @import '../../styles/_variables.scss';
 
 .container {
-  display: block;
-  position: relative;
-  width: 85px;
-  height: 32px;
+  cursor: pointer;
 
-  & img {
-    object-fit: contain;
-  }
-
-  @media screen and (min-width: $tablet) {
-    width: 88px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    width: 212px;
-    height: 56px;
+  & svg {
+    width: 85px;
+    height: 32px;
+    @media screen and (min-width: $tablet) {
+      width: 88px;
+    }
+    @media screen and (min-width: $desktop) {
+      width: 212px;
+      height: 56px;
+    }
   }
 }
