--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -25,7 +25,7 @@
   & svg {
     width: 100%;
     height: 100%;
-    stroke: $Primary600;
+    stroke: $Gray-0;
   }
 
   @media screen and (min-width: $tablet) {
@@ -53,9 +53,9 @@
 }
 
 .text {
-  font-family: inherit;
-  font-weight: 400;
+  font-family: GothamProBold, sans-serif;
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.6;
-  color: $SecondaryColor;
+  color: $Gray-0;
 }
