--- a/src/components/share/IsLoading/IsLoading.module.scss
+++ b/src/components/share/IsLoading/IsLoading.module.scss
@@ -1,7 +1,7 @@
-@import "../../../styles/variables";
+@import '../../../styles/variables';
 
 .isLoading {
-  color: $SecondaryColor;
+  color: $Secondary-800;
   text-align: center;
   width: 100%;
   height: 296px;
