--- a/src/components/Hero/Hero.module.scss
+++ b/src/components/Hero/Hero.module.scss
@@ -1,168 +1,123 @@
 @import '../../styles/_variables.scss';
 
 .container {
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  background-color: $Primary900;
+  position: relative;
+  height: 100vh;
+  padding-top: 96px;
+
+  background-image: url('../../../public/webp/HeroDesktop.webp');
+  background-size: cover;
+  background-position: bottom;
+  background-attachment: lazy;
+  &::after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 37%;
+    background-color: rgba(97, 108, 70, 0.55);
+    @media screen and (min-width: $tablet) {
+      top: 0;
+      left: 0;
+      width: 80%;
+      height: 100vh;
+    }
+    @media screen and (min-width: $desktop) {
+      width: 60%;
+    }
+  }
+  @media screen and (min-width: $tablet) {
+    padding-top: 118px;
+  }
+  @media screen and (min-width: $desktop) {
+    padding-top: 202px;
+  }
 }
 
 .hero {
-  position: sticky;
-  top: 0;
-
+  position: relative;
+  z-index: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
   @media screen and (min-width: $tablet) {
-    width: 100%;
+    justify-content: start;
+    row-gap: 32px;
+  }
+  @media screen and (min-width: $desktop) {
+    row-gap: 80px;
   }
 }
 
 .title {
-  position: relative;
-  font-weight: 700;
-  // font-family: var(--font--cormorantInfant);
-  font-size: 22px;
+  font-family: GothamProBold, sans-serif;
+  font-size: 26px;
   line-height: 1.25;
-  color: $SecondaryColor;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  background-clip: text;
-  text-shadow: 4px 4px 8px 0px rgba(246, 246, 244, 0.25);
-  margin-bottom: 16px;
-  height: 55px;
-
-  @media screen and (min-width: $mobile) {
-    font-size: 26px;
-    height: 65px;
-  }
+  color: $Gray-0;
+  margin-bottom: 8px;
+  height: 98px;
 
   @media screen and (min-width: 580px) {
-    font-size: 36px;
+    height: 33px;
   }
 
   @media screen and (min-width: $tablet) {
-    font-size: 56px;
-    margin-bottom: 20px;
-    line-height: 1;
-    height: 112px;
+    height: 33px;
   }
 
   @media screen and (min-width: $desktop) {
-    font-size: 68px;
-    margin-bottom: 4px;
-    z-index: 3;
-    height: 68px;
-  }
-}
-
-.heroContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: column-reverse;
-  justify-content: space-between;
-
-  @media screen and (min-width: $tablet) {
-    flex-direction: row;
+    font-size: 40px;
+    line-height: 1;
+    margin-bottom: 24px;
+    width: 50%;
+    height: 80px;
   }
 }
 
 .subTitle {
-  font-weight: 400;
-  font-size: 16px;
+  font-family: GothamProMedium, sans-serif;
+  font-weight: 500;
   line-height: 1.4;
-  letter-spacing: 0.01em;
-  color: $SecondaryColor;
-  margin-bottom: 12px;
-  height: 23px;
-
-  @media screen and (min-width: $mobile) {
-    font-size: 20px;
-    height: 28px;
-  }
-
-  @media screen and (min-width: 580px) {
-    font-size: 24px;
-    height: 28px;
-  }
-
-  @media screen and (min-width: $tablet) {
-    width: 80%;
-    font-size: 20px;
-    margin-bottom: 16px;
-  }
+  font-size: 22px;
+  height: 31px;
+  color: $Gray-0;
 
   @media screen and (min-width: $desktop) {
-    font-size: 26px;
-    margin-bottom: 20px;
-    height: 37px;
+    font-weight: 500;
+    font-size: 32px;
+    height: 42px;
+    width: 50%;
   }
 }
 
-.callContiner {
-  height: 108px;
-  margin-bottom: 16px;
-
-  @media screen and (min-width: $mobile) {
-    height: 138px;
-  }
-
+.btnsWraper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
   @media screen and (min-width: $tablet) {
-    height: 172px;
-    margin-bottom: 20px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    height: 152px;
-    margin-bottom: 24px;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    column-gap: 24px;
   }
 }
 
-.imgFirst {
-  position: relative;
+.btn {
   width: 100%;
-  height: 337px;
-
+  border: none;
+  border-radius: 8px;
+  text-transform: uppercase;
+  box-shadow: 2px 2px 4px 0 rgba(69, 73, 67, 0.25);
   @media screen and (min-width: $tablet) {
-    width: 49%;
-    height: 464px;
+    width: 151px;
   }
-
   @media screen and (min-width: $desktop) {
-    width: 55%;
-    height: 534px;
-  }
-
-  & img {
-    object-fit: cover;
-  }
-}
-
-.heroContent {
-  @media screen and (min-width: $tablet) {
-    width: 49%;
-  }
-
-  @media screen and (min-width: $desktop) {
-    padding-top: 16px;
-    width: 40%;
-  }
-}
-
-.imgSecond {
-  display: none;
-
-  @media screen and (min-width: $tablet) {
-    position: relative;
-    display: block;
-    width: 100%;
-    height: 232px;
-  }
-
-  @media screen and (min-width: $desktop) {
-    height: 283px;
-  }
-
-  & img {
-    object-fit: cover;
+    width: 288px;
   }
 }
