--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -20,6 +20,7 @@
 
   @media screen and (min-width: $mobile) {
     padding: 16px 32px;
+    // margin: 10px;
   }
 
   @media screen and (min-width: $tablet) {
