--- a/src/components/OrderBtn/OrderBtn.module.scss
+++ b/src/components/OrderBtn/OrderBtn.module.scss
@@ -1,6 +1,7 @@
 @import "../../styles/_variables.scss";
 
 .button {
+    font-family: GothamPro, sans-serif;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
