--- a/src/components/OrderForm/OrderForm.module.scss
+++ b/src/components/OrderForm/OrderForm.module.scss
@@ -14,7 +14,7 @@
     align-items: center;
     text-align: center;
     padding: 24px;
-    background-color: $Primary50;
+    background-color: $Gray-0;
     max-width: 360px;
     height: 556px;
 
@@ -50,7 +50,7 @@
     bottom: 2px;
     width: 16px;
     height: 16px;
-    fill: $Primary600;
+    fill: $Gray-600;
 
     @media screen and (min-width: $desktop) {
         left: 10px;
@@ -133,7 +133,7 @@
     cursor: pointer;
     border-bottom: 1px solid $Primary900;
     padding-left: 32px;
-
+    font-family: inherit;
     @media screen and (min-width: $tablet) {
         width: 407px;
     }
@@ -144,35 +144,35 @@
 }
 
 .input::-webkit-input-placeholder {
-    color: $Primary600;
+    color: $Gray-600;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.6;
 }
 
 .input::-moz-placeholder {
-    color: $Primary600;
+    color: $Gray-600;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.6;
 }
 
 .input:-ms-input-placeholder {
-    color: $Primary600;
+    color: $Gray-600;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.6;
 }
 
 .input::-ms-input-placeholder {
-    color: $Primary600;
+    color: $Gray-600;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.6;
 }
 
 .input::placeholder {
-    color: $Primary600;
+    color: $Gray-600;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.6;
@@ -189,7 +189,7 @@
 .label {
     position: absolute;
     top: -15px;
-    color: $Primary900;
+    color: $Gray-900;
     font-size: 14px;
     font-weight: 400;
     line-height: 1.7;
@@ -200,7 +200,7 @@
     }
 }
 
-.wrapError>div {
+.wrapError > div {
     width: 100%;
 }
 
@@ -230,7 +230,7 @@
     top: 7px;
     width: 20px;
     height: 20px;
-    stroke: $Primary600;
+    stroke: $Gray-600;
 
     @media screen and (min-width: $desktop) {
         left: 5px;
@@ -292,7 +292,7 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 1.7;
-    color: $Primary600;
+    color: $Gray-600;
 
     @media screen and (min-width: $desktop) {
         position: absolute;
@@ -307,23 +307,21 @@
     display: flex;
     width: 100%;
     padding: 8px 0px 8px;
-
     -webkit-box-pack: center;
-
     -ms-flex-pack: center;
-
     justify-content: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
     gap: 24px;
 
-    border-radius: 24px;
-    border: 1px solid $Primary900;
-    background-color: $Primary50;
+    border-radius: 8px;
+    border: 0.5px solid transparent;
+    background: $Gray-0;
+    box-shadow: 2px 2px 4px 0px #45494340;
 
-    color: $Primary900;
-    font-family: inherit;
+    color: $Secondary-800;
+    font-family: GothamPro, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -340,14 +338,15 @@
 }
 
 .activeBtn {
-    background-color: $Primary800;
-    color: $Primary50;
+    background-color: $Secondary-800;
+    color: $Gray-50;
     cursor: pointer;
 }
 
 // --------------  styles for success content  -----------------
 
 .successContainer {
+    font-family: inherit;
     margin-top: 156px;
     height: 100%;
     width: 100%;
@@ -385,13 +384,16 @@
     font-size: 16px;
     font-weight: 700;
     line-height: 1.6;
+    color: $Secondary-800;
 
     @media screen and (min-width: $tablet) {
         font-size: 18px;
         line-height: 1.4;
+        max-width: 455px;
     }
 
     @media screen and (min-width: $desktop) {
         font-size: 22px;
+        max-width: 626px;
     }
 }
