changed color variables

--- a/src/components/OrderForm/OrderForm.module.scss
+++ b/src/components/OrderForm/OrderForm.module.scss
@@ -131,7 +131,7 @@
     outline: none;
     border: none;
     cursor: pointer;
-    border-bottom: 1px solid $Primary900;
+    border-bottom: 1px solid $Gray-900;
     padding-left: 32px;
     font-family: inherit;
     @media screen and (min-width: $tablet) {
