--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -193,19 +193,29 @@
 
   @media screen and (min-width: $tablet) {
     display: block;
-    margin-left: 20px;
-    padding: 5px;
+    margin-left: auto;
+    margin-right: 40px;
+    padding: 4px 12px;
     z-index: 20;
     cursor: pointer;
-    background-color: $dashboardBtnBgColor;
+    background-color: $Primary-600;
+    color: $Gray-0;
     border-radius: 3px;
     border-color: transparent;
-    font-weight: 700;
+    font-family:GothamPro, sans-serif;
+    font-size: 16px;
   }
+
+    @media screen and (min-width: $desktop) {
+      margin-left: 0;
+      margin-right: 0;
+      padding: 8px 16px;
+      font-size: 20px;
+    }
 }
 
 .logoutBtn:hover {
-  background-color: $dashboardHoverBtnBgColor;
+  background-color: $Primary-800;
 }
 
 .mobileNavigation,
