--- a/src/components/Auth/Login.module.scss
+++ b/src/components/Auth/Login.module.scss
@@ -59,7 +59,7 @@
 .input {
   padding: 20px;
   background-color: transparent;
-  border: 2px solid $Primary400;
+  border: 2px solid $Gray-400;
   border-radius: 5px;
   font-size: 20px;
   font-weight: bold;
@@ -67,7 +67,7 @@
 
 .loginBtn {
   padding: 20px;
-  background-color: $Primary800;
+  background-color: $Gray-800;
   color: $Gray-0;
   font-size: 20px;
   border-radius: 5px;
