--- a/src/components/DashboardForm/DashboardForm.module.scss
+++ b/src/components/DashboardForm/DashboardForm.module.scss
@@ -24,9 +24,9 @@
 .textarea {
   padding: 10px;
   background-color: transparent;
-  border: 2px solid $Primary400;
+  border: 2px solid $Gray-400;
   border-radius: 3px;
-  color: $Primary900;
+  color: $Gray-900;
   font-size: 20px;
   font-weight: bold;
 }
@@ -84,7 +84,7 @@ fieldset.amenities {
   padding: 12px;
   border: none;
   border-radius: 3px;
-  background-color: $Primary400;
+  background-color: $Gray-400;
   font-family: GothamProBold, sans-serif;
   font-size: 16px;
   font-weight: 700;
