--- a/src/components/UpdatingForm/UpdatingForm.module.scss
+++ b/src/components/UpdatingForm/UpdatingForm.module.scss
@@ -36,11 +36,11 @@
 .textarea {
   padding: 10px;
   background-color: transparent;
-  border: 2px solid $Primary400;
+  border: 2px solid $Gray-400;
   border-radius: 3px;
-  color: $Primary900;
+  color: $Gray-900;
   font-size: 20px;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .textarea {
@@ -96,7 +96,7 @@ fieldset.amenities {
   padding: 12px;
   border: none;
   border-radius: 3px;
-  background-color: $Primary400;
+  background-color: $Gray-400;
   font-family: GothamProBold, sans-serif;
   font-size: 16px;
   font-weight: 700;
