--- a/src/components/share/TranslatorBtnBlock/TranslatorBtnBlock.module.scss
+++ b/src/components/share/TranslatorBtnBlock/TranslatorBtnBlock.module.scss
@@ -42,7 +42,8 @@
 .langSwitcherClose {
   @media screen and (min-width: $desktop) {
     background-color: transparent;
-    transform: translateY(-20%);
+    transform: translateY(20%);
+    // transform: translateY(-20%);
     overflow: hidden;
     opacity: 0;
     height: 0;
@@ -97,7 +98,7 @@
     right: -8px;
 
     font-family: GothamPro, sans-serif;
-    width: 50px;
+    width: 52px;
     height: 32px;
     font-weight: 400;
     font-size: 16px;
