--- a/src/components/ApartItem/ApartItem.module.scss
+++ b/src/components/ApartItem/ApartItem.module.scss
@@ -71,7 +71,7 @@
   font-size: 12px;
   font-weight: 400;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  // white-space: nowrap;
   overflow: hidden;
   margin-right: auto;
   // font-family: Gotham Pro;
@@ -86,7 +86,7 @@
   font-size: 12px;
   font-weight: 400;
   text-overflow: ellipsis;
-  white-space: nowrap;
+  // white-space: nowrap;
   overflow: hidden;
   margin-right: auto;
   // font-family: Gotham Pro;
