--- a/src/components/ApartmentsComponent/Apartments.module.scss
+++ b/src/components/ApartmentsComponent/Apartments.module.scss
@@ -8,10 +8,10 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  background-color: $Primary900;
+  background-color: $Gray-0;
 }
 
-.filterContainer {
+.BreadCrumbs {
   height: 16px;
   position: relative;
   width: 100%;
@@ -33,6 +33,12 @@
   @media screen and (min-width: $desktop) {
     margin-bottom: 16px;
   }
+}
+
+.filterContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .containerOneRooms {
