--- a/src/components/Filter/FilterItem/FilterItem.module.scss
+++ b/src/components/Filter/FilterItem/FilterItem.module.scss
@@ -1,14 +1,9 @@
 @import "../../../styles/_variables.scss";
-
 .filterInputCheckbox {
-  position: relative;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  width: 28px;
-  height: 10px;
-  background: $Primary300;
-  border-radius: 50px;
+  width: 24px;
+  height: 24px;
+  margin-right: 16px;
+  color: $Gray-100;
 
   cursor: pointer;
   -webkit-transition: 0.4s;
@@ -18,52 +13,33 @@
   &::after {
     position: absolute;
     content: "";
-    top: -3px;
-    left: -3px;
-    width: 16px;
-    height: 16px;
-    background: $lightFontColor;
-    border-radius: 50%;
-    -webkit-box-shadow: 0px 2px 8px 0px #00000029;
-    box-shadow: 0px 2px 8px 0px #00000029;
-    -webkit-transition: 0.4s;
-    -o-transition: 0.4s;
-    transition: 0.4s;
+    // width: 24px;
+    // height: 24px;
+    border: 1px $Primary-900 solid;
+
+    color: $Primary-900;
   }
 }
-
 .filterInputCheckbox__Checked {
-  position: relative;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  width: 28px;
-  height: 10px;
-  border-radius: 50px;
+  width: 24px;
+  height: 24px;
+  margin-right: 16px;
 
   cursor: pointer;
   -webkit-transition: 0.4s;
   -o-transition: 0.4s;
   transition: 0.4s;
-  background: $Primary600;
 
   &::after {
     position: absolute;
-    top: -3px;
-    left: 50%;
     content: "";
-    width: 16px;
-    height: 16px;
-    background: $lightFontColor;
-    border-radius: 50%;
-    -webkit-box-shadow: 0px 2px 8px 0px #00000029;
-    box-shadow: 0px 2px 8px 0px #00000029;
-    -webkit-transition: 0.4s;
-    -o-transition: 0.4s;
-    transition: 0.4s;
+    // width: 24px;
+    // height: 24px;
+    border: 1px $Primary-900 solid;
+    background-color: $Gray-100;
+    color: $Primary-900;
   }
 }
-
 .filterItem {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -78,7 +54,7 @@
 
 .filterCheckboxTitle {
   margin-right: 10px;
-  color: $lightFontColor;
+  color: $Gray-900;
   // font-family: var(--font--lato);
   font-size: 16px;
   font-style: normal;
@@ -95,3 +71,68 @@
     font-size: 20px;
   }
 }
+
+//!------НЕ ВИДАЛЯТИ, МОЖЕ ПОТІМ ЗНАДОБИТЬСЯ
+// .filterInputCheckbox {
+//   position: relative;
+//   -webkit-appearance: none;
+//   -moz-appearance: none;
+//   appearance: none;
+//   width: 28px;
+//   height: 10px;
+//   background: $Primary300;
+//   border-radius: 50px;
+
+//   cursor: pointer;
+//   -webkit-transition: 0.4s;
+//   -o-transition: 0.4s;
+//   transition: 0.4s;
+
+//   &::after {
+//     position: absolute;
+//     content: "";
+//     top: -3px;
+//     left: -3px;
+//     width: 16px;
+//     height: 16px;
+//     background: $lightFontColor;
+//     border-radius: 50%;
+//     -webkit-box-shadow: 0px 2px 8px 0px #00000029;
+//     box-shadow: 0px 2px 8px 0px #00000029;
+//     -webkit-transition: 0.4s;
+//     -o-transition: 0.4s;
+//     transition: 0.4s;
+//   }
+// }
+
+// .filterInputCheckbox__Checked {
+//   position: relative;
+//   -webkit-appearance: none;
+//   -moz-appearance: none;
+//   appearance: none;
+//   width: 28px;
+//   height: 10px;
+//   border-radius: 50px;
+
+//   cursor: pointer;
+//   -webkit-transition: 0.4s;
+//   -o-transition: 0.4s;
+//   transition: 0.4s;
+//   background: $Primary600;
+
+//   &::after {
+//     position: absolute;
+//     top: -3px;
+//     left: 50%;
+//     content: "";
+//     width: 16px;
+//     height: 16px;
+//     background: $lightFontColor;
+//     border-radius: 50%;
+//     -webkit-box-shadow: 0px 2px 8px 0px #00000029;
+//     box-shadow: 0px 2px 8px 0px #00000029;
+//     -webkit-transition: 0.4s;
+//     -o-transition: 0.4s;
+//     transition: 0.4s;
+//   }
+// }
