--- a/src/components/FilterRooms/FilterRoomItem/FilterRoomItem.module.scss
+++ b/src/components/FilterRooms/FilterRoomItem/FilterRoomItem.module.scss
@@ -24,7 +24,7 @@
     font-size: 14px;
   }
 
-  color: $lightFontColor;
+  // color: $lightFontColor;
   // font-family: var(--font--lato);
   font-size: 16px;
   font-weight: 400;
