--- a/src/components/FilterRooms/FilterRooms.module.scss
+++ b/src/components/FilterRooms/FilterRooms.module.scss
@@ -6,16 +6,15 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 auto;
+  // margin: 0 auto;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: space-between;
-
+  margin-bottom: 12px;
   @media screen and (min-width: $tablet) {
     max-width: 482px;
-
   }
 }
