--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
-$mobile: '360px';
-$tablet: '768px';
-$desktop: '1366px';
+$mobile: "360px";
+$tablet: "768px";
+$desktop: "1366px";
 //old styles
 $Primary900: #131112;
 $Primary800: #333132;
@@ -22,38 +22,38 @@ $dashboardHoverBtnBgColor: #f1b806;
 // before this line - Daily Rent Kiev. After this - Sofia Rent
 
 //new styles
-$Primary-900: #616C46;
-$Primary-800: #838E55;
-$Primary-700: #97A25D;
-$Primary-600: #ACB668;
-$Primary-500: #BDC671;
-$Primary-400: #C6CE85;
-$Primary-300: #D1D79A;
-$Primary-200: #DEE3B6;
-$Primary-100: #EBEED1;
-$Primary-50: #F7F8ED;
+$Primary-900: #616c46;
+$Primary-800: #838e55;
+$Primary-700: #97a25d;
+$Primary-600: #acb668;
+$Primary-500: #bdc671;
+$Primary-400: #c6ce85;
+$Primary-300: #d1d79a;
+$Primary-200: #dee3b6;
+$Primary-100: #ebeed1;
+$Primary-50: #f7f8ed;
 
-$Secondary-800:#454943;
+$Secondary-800: #454943;
 
 // old variables are commented
 // $Primary900: #131112;
-$Gray-900:#131112;
+$Gray-900: #131112;
 // $Primary800: #333132;
-$Gray-800:#333132;
-$Gray-700:#514F50;
+$Gray-800: #333132;
+$Gray-700: #514f50;
 // $Primary600: #646263;
-$Gray-600:#646263;
-$Gray-500:#8B898A;
+$Gray-600: #646263;
+$Gray-500: #8b898a;
 // $Primary400: #acaaab;
-$Gray-400:#ACAAAB;
-$Gray-300:#D1CFD0;
-$Gray-200:#E3E1E2;
-$Gray-100:#EFEDEE;
+$Gray-400: #acaaab;
+$Gray-300: #d1cfd0;
+$Gray-200: #e3e1e2;
+$Gray-100: #efedee;
 // $Primary50: #f9f6f8;
-$Gray-50:#F9F6F8;
-$Gray-0: #FFFFFF;
+$Gray-50: #f9f6f8;
+$Gray-0: #ffffff;
 
-$Error: #A20B0B;
-$Warning: #FFC400;
-$Success: #00793C;
-$System: #2320C6;
+$Error: #a20b0b;
+$Warning: #ffc400;
+$Success: #00793c;
+$System: #2320c6;
