--- a/src/components/ApartItem/ApartItem.module.scss
+++ b/src/components/ApartItem/ApartItem.module.scss
@@ -10,10 +10,12 @@
   -ms-flex-direction: column;
   flex-direction: column;
   row-gap: 4px;
-  background-color: $Primary100;
+  background-color: $Primary-50;
+  box-shadow: 2px 2px 4px 0px rgba(69, 73, 67, 0.25);
+
   padding: 8px;
   width: 100%;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 .imgContainer {
@@ -33,6 +35,7 @@
 .img {
   -o-object-fit: cover;
   object-fit: cover;
+  border-radius: 8px;
 }
 
 .codeImg {
@@ -74,10 +77,12 @@
   // white-space: nowrap;
   overflow: hidden;
   margin-right: auto;
+  line-height: 20.4px;
   // font-family: Gotham Pro;
 
   @media screen and (min-width: $desktop) {
     font-size: 14px;
+    line-height: 23.8px;
   }
 }
 
@@ -89,6 +94,7 @@
   // white-space: nowrap;
   overflow: hidden;
   margin-right: auto;
+  line-height: 20.4px;
   // font-family: Gotham Pro;
 }
 
@@ -101,7 +107,9 @@
   -ms-flex-align: center;
   align-items: center;
   justify-content: space-between;
-  row-gap: 6px;
+  row-gap: 4px;
+
+  height: 100%;
 }
 .complexContainer {
   display: flex;
@@ -120,15 +128,17 @@
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
-  color: $accentColor;
+  color: $Primary900;
   // font-family: Gotham Pro;
   font-size: 12px;
   font-weight: 400;
+  line-height: 20.4px;
 
   margin-right: auto;
 
   @media screen and (min-width: $desktop) {
     font-size: 14px;
+    line-height: 23.8px;
   }
 }
 
@@ -159,7 +169,7 @@
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
-  line-height: normal;
+  line-height: 20.4px;
   margin-right: 4px;
 }
 
@@ -174,22 +184,23 @@
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  background-color: $Primary800;
+  background-color: $Secondary-800;
+  box-shadow: 2px 2px 4px 0px rgba(69, 73, 67, 0.25);
   cursor: pointer;
   outline: none;
-  border-radius: 24px;
-  border: 1px solid $accentColor;
-  color: $Primary50;
+  border-radius: 8px;
+  border: 1px solid $Secondary-800;
+  color: $Gray-0;
   font-size: 16px;
   font-weight: 400;
-  // line-height: 25.6px;
+  line-height: 25.6px;
 
   &:hover,
   &:focus {
-    background-color: $Primary50;
-    color: $Primary900;
+    background-color: $Primary-50;
+    color: $Secondary-800;
   }
 
   margin-left: auto;
-  margin-top: 4px;
+  margin-top: auto;
 }
