--- a/src/components/ApartmentsComponent/Apartments.module.scss
+++ b/src/components/ApartmentsComponent/Apartments.module.scss
@@ -38,7 +38,20 @@
 .filterContainer {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
+
+  @media screen and (min-width: $tablet) {
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+
+    // align-items: center;
+  }
+
+  // @media screen and (min-width: $desktop) {
+
+  // }
 }
 
 .containerOneRooms {
@@ -51,16 +64,71 @@
   -webkit-column-gap: 30px;
   -moz-column-gap: 30px;
   column-gap: 30px;
-  row-gap: 40px;
-  padding: 40px 0;
+  row-gap: 12px;
+  padding: 12px 0 16px 0;
   width: 100%;
 
   @media screen and (min-width: $tablet) {
     grid-template-columns: repeat(2, 1fr);
+    row-gap: 16px;
+    column-gap: 20px;
+    -webkit-column-gap: 20px;
+    -moz-column-gap: 20px;
+  }
+
+  @media screen and (min-width: $desktop) {
+    row-gap: 24px;
+    column-gap: 24px;
+    -webkit-column-gap: 24px;
+    -moz-column-gap: 24px;
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.containerOneRooms_Opened {
+  @media screen and (min-width: $tablet) {
+    display: -ms-grid;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+
+    & > div {
+      grid-column: span 1;
+      grid-row: 1 / 3;
+    }
+
+    & > li {
+      grid-column: 2;
+    }
+
+    // &>li:nth-child(2n + 1) {
+    //   grid-column: 3;
+    // }
   }
 
   @media screen and (min-width: $desktop) {
     grid-template-columns: repeat(4, 1fr);
+
+    & > li:nth-child(3n + 2) {
+      grid-column: 2;
+    }
+    & > li:nth-child(3n + 3) {
+      grid-column: 3;
+    }
+    & > li:nth-child(3n + 4) {
+      grid-column: 4;
+    }
+    // & > li:nth-child(n + 3) {
+    //   grid-column: 2;
+    // }
+
+    // & > li:nth-child(4n + 1) {
+    //   grid-column: 3;
+    // }
+
+    //   & > li:nth-child(4n) {
+    //     grid-column: 4;
+    //   }
   }
 }
 
@@ -101,4 +169,15 @@
   & p {
     color: $lightFontColor;
   }
+}
+
+.abrakadabra {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+}
+
+.abrakadabra__hidden {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
