--- a/src/components/Filter/Filter.module.scss
+++ b/src/components/Filter/Filter.module.scss
@@ -1,10 +1,21 @@
 @import "../../styles/_variables.scss";
 .newExternalContainer_closed {
+  @media screen and (min-width: $tablet) {
+    // margin-right: auto;
+  }
 }
 
 .newExternalContainer_opened {
   background-color: $Primary-50;
   padding: 12px 16px;
+
+  @media screen and (min-width: $tablet) {
+    width: 333px;
+    max-height: 810px;
+    -webkit-transition: width 0.5s linear, opacity 0.5s linear;
+    -o-transition: width 0.5s linear, opacity 0.5s linear;
+    transition: width 0.5s linear, opacity 0.5s linear;
+  }
 }
 
 .container {
@@ -23,8 +34,6 @@
   align-items: center;
   // margin-bottom: 15px;
   // padding: 12px 16px;
-  margin-left: auto;
-  margin-right: auto;
 
   background-color: $Primary-50;
 
@@ -37,8 +46,13 @@
   height: 810px;
 
   @media screen and (min-width: $tablet) {
-    max-width: 680px;
-    // height: 220px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 333px;
+    max-height: 810px;
+    -webkit-transition: width 0.5s linear, opacity 0.5s linear;
+    -o-transition: width 0.5s linear, opacity 0.5s linear;
+    transition: width 0.5s linear, opacity 0.5s linear;
   }
 
   @media screen and (min-width: $desktop) {
@@ -76,8 +90,15 @@
   transition: height 0.5s linear, opacity 0.5s linear;
   opacity: 0;
   height: 0;
+  width: 0;
   overflow: hidden;
   border: 0;
+
+  @media screen and (min-width: $tablet) {
+    -webkit-transition: width 0.5s linear, opacity 0.5s linear;
+    -o-transition: width 0.5s linear, opacity 0.5s linear;
+    transition: width 0.5s linear, opacity 0.5s linear;
+  }
 }
 
 .filterContainer {
@@ -326,6 +347,13 @@
 .inputBeds {
   width: 24px;
   height: 24px;
+  color: $Primary-900;
+  background-color: $Primary-900;
 
   margin-right: 16px;
+
+  &::after {
+    content: "";
+    color: $Primary-900;
+  }
 }
