--- a/src/components/FilterRooms/FilterRooms.module.scss
+++ b/src/components/FilterRooms/FilterRooms.module.scss
@@ -1,7 +1,8 @@
 @import "../../styles/variables";
 
 .container {
-  max-width: 306px;
+  width: 306px;
+  // width: 100%;
   height: 16px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -14,7 +15,12 @@
   -ms-flex-pack: center;
   justify-content: space-between;
   margin-bottom: 12px;
+
   @media screen and (min-width: $tablet) {
-    max-width: 482px;
+    margin-left: calc((100% - 450px - 112px) / 2);
+    margin-bottom: 0;
+  }
+  @media screen and (min-width: $desktop) {
+    width: 382px;
   }
 }
