--- a/src/components/share/ButtonFilter/ButtonFilter.module.scss
+++ b/src/components/share/ButtonFilter/ButtonFilter.module.scss
@@ -7,6 +7,11 @@
   justify-content: center;
   margin-right: auto;
   margin-left: auto;
+  padding: 0 12px;
+
+  @media screen and (min-width: $tablet) {
+    margin: 0;
+  }
 
   // @media screen and (min-width: $tablet) {
   //   position: absolute;
