--- a/src/components/BreadCrumbs/BreadCrumbs.module.scss
+++ b/src/components/BreadCrumbs/BreadCrumbs.module.scss
@@ -1,35 +1,35 @@
 @import "../../styles/_variables.scss";
 
 .wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    column-gap: 4px;
-    width: -webkit-max-content;
-    width: -moz-max-content;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.6;
-    cursor: pointer;
-    margin-right: auto;
-    color:$Secondary-800;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  column-gap: 4px;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.6;
+  cursor: pointer;
+  margin-right: auto;
+  color: $Primary-900;
 
-    @media screen and (min-width: $tablet) {
-        column-gap: 12px;
-    }
+  @media screen and (min-width: $tablet) {
+    column-gap: 12px;
+  }
 
-    @media screen and (min-width: $desktop) {
-        font-size: 20px;
-        line-height: 1.7;
-    }
+  @media screen and (min-width: $desktop) {
+    font-size: 20px;
+    line-height: 1.7;
+  }
 }
 
 .backIcon {
-    width: 24px;
-    height: 24px;
-    fill: none;
-    stroke: $Secondary-800;
+  width: 24px;
+  height: 24px;
+  fill: none;
+  stroke: $Primary-900;
 }
