--- a/src/components/FilterRooms/FilterRooms.module.scss
+++ b/src/components/FilterRooms/FilterRooms.module.scss
@@ -1,8 +1,7 @@
 @import "../../styles/variables";
 
 .container {
-  width: 306px;
-  // width: 100%;
+  width: 100%;
   height: 16px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -17,6 +16,7 @@
   margin-bottom: 12px;
 
   @media screen and (min-width: $tablet) {
+    width: 306px;
     margin-left: calc((100% - 450px - 112px) / 2);
     margin-bottom: 0;
   }
